# sweet

./: .gitignore  LICENSE  README.md  __init__.py  associations.py  bug_list.txt  collection.py  criteria.py  database.py  decorates.py  exceptions.py  form.py  inflection.py  lib.py  libs.py  method_missing.py  nodes.py  parse.py  pyproject.toml  query_set.py  record.py  record_manager.py  relation.py  relations.py  requirements.txt  schema.py  setup.py  sql_builder.py  support.py  tags.py  template.py  todo_list.txt  tokens.py  utils.py  writer.py
_docs/: form_helper.md  orm.md  orm_basic.md  orm_relations.md  recordset.md  template.md
_sweet/: README.md  collection.py  criteria.py  schema.py  validation.py
_tests/: __init__.py  all.py  test_tmp.py
active_record/: __init__.py  associations.py  collection.py  method_missing.py  record.py  sql_builder.py
active_support/: __init__.py  decorates.py  exceptions.py  inflection.py
activerecord/: __init__.py  associations.py  collection.py  method_missing.py  query_methods.py  record.py  validation.py  validators.py
activeroute/: __init__.py  route.py
activesupport/: __init__.py  exceptions.py  utils.py
database/: __init__.py  clauses.py  db.py  db_manager.py  filters.py  manager.py  mysql.py  recordset.py  table.py
db/: __init__.py  clauses.py  db_manager.py  filters.py  manager.py  mysql.py  recordset.py
documents/: orm.md  recordset.md  template.md
examples/: active_record_example.py
orm/: __init__.py  fields.py  has_one.py  method_missing.py  model.py  relation.py
query/: __init__.py  criteria.py  join_clause.py  mysql_sqlbuilder.py  sqlbuilder.py
(+683 files in other folders)
