[project]
name = "sweet"
version = "0.1.0"
description = "python3 web framework looks like rails"
license = { text = "MIT" }
authors = [
    {name = "ryanpoy",email = "ryanpoy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "pymysql>=1.1.1",
]
