[tool.ruff]
ignore = ["E701", "E731", "E741"]

[tool.uv.pip]
extra-index-url = ["https://pypi.tuna.tsinghua.edu.cn/simple"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = 'function'

[project]
name = "sweet"
version = "0.1.0"
description = "python3 web framework looks like rails"
license = { text = "MIT" }
authors = [{ name = "ryanpoy", email = "ryanpoy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
